--- a/environment.yml
+++ b/environment.yml
@@ -20,6 +20,7 @@ dependencies:
   - numpydoc=1.4.0=pyhd8ed1ab_0
   - openpyxl=3.0.9=pyhd8ed1ab_0
   - pandas=1.4.3=py310hf5e1058_0
+  - pip=22.1.2=pyhd8ed1ab_0
   - proj=9.0.1=h1cfcee9_1
   - pyproj=3.3.1=py310h843b76b_1
   - python=3.10.5=h9a09f29_0_cpython
