--- a/environment.yml
+++ b/environment.yml
@@ -1,29 +1,7 @@
-name: streamlit
 channels:
   - conda-forge
-  - defaults
 dependencies:
-  - cartopy=0.20.3=py310hfbfc819_1
-  - gdal=3.5.1=py310h7990aed_1
-  - geopandas=0.11.0=pyhd8ed1ab_0
-  - geopandas-base=0.11.0=pyha770c72_0
-  - geos=3.11.0=h39d44d4_0
-  - glib=2.70.2=h7755175_4
-  - glib-tools=2.70.2=h7755175_4
-  - libspatialindex=1.9.3=h39d44d4_4
-  - libspatialite=5.0.1=ha17912d_18
-  - matplotlib=3.5.2=py310h5588dad_0
-  - matplotlib-base=3.5.2=py310h79a7439_0
-  - matplotlib-inline=0.1.3=pyhd8ed1ab_0
-  - notion-client=1.0.0=pyhd8ed1ab_0
-  - numpy=1.23.0=py310h8a5b91a_0
-  - numpydoc=1.4.0=pyhd8ed1ab_0
-  - openpyxl=3.0.9=pyhd8ed1ab_0
-  - pandas=1.4.3=py310hf5e1058_0
-  - pip=22.1.2=pyhd8ed1ab_0
-  - proj=9.0.1=h1cfcee9_1
-  - pyproj=3.3.1=py310h843b76b_1
-  - python=3.10.5=h9a09f29_0_cpython
+  - cartopy==0.20.3
   - pip:
     - streamlit==1.10.0
   
