--- a/environment.yml
+++ b/environment.yml
@@ -2,6 +2,11 @@ channels:
   - conda-forge
 dependencies:
   - cartopy==0.20.3
+  - pip==22.1.2
+  - proj==9.0.1
+  - matplotlib==3.5.2
+  - numpy==1.23
+  - pandas==1.4.3
   - pip:
     - streamlit==1.10.0
   
