--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,7 @@ channels:
 dependencies:
   - python==3.9
   - cartopy==0.20.3
+  - geopandas==0.11.0
   - pip==22.1.2
   - proj==9.0.1
   - matplotlib==3.5.2
