--- a/environment.yml
+++ b/environment.yml
@@ -2,13 +2,13 @@ channels:
   - conda-forge
 dependencies:
   - python==3.9
-  - cartopy==0.20.3
-  - geopandas==0.11.0
-  - pip==22.1.2
-  - proj==9.0.1
-  - matplotlib==3.5.2
-  - numpy==1.23
-  - pandas==1.4.3
+  - cartopy
+  - geopandas
+  - pip
+  - proj
+  - matplotlib
+  - numpy
+  - pandas
   - pip:
-    - streamlit==1.10.0
+    - streamlit
   
